--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ ol {
 
 /*base stile*/
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -54,8 +54,11 @@ ol {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
 
-  width: 1200px;
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .centered {
@@ -187,6 +190,13 @@ img {
 }
 
 /*About section*/
+.section-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 50px;
+}
 
 /*Team section*/
 .team-section {
@@ -199,9 +209,23 @@ img {
   line-height: 1.19;
   text-align: center;
 }
+
+.section-title {
+  margin-bottom: 50px;
+}
 .team-position {
   line-height: calc(19 / 16);
   text-align: center;
+}
+
+.teaam-item {
+ 
+  margin-bottom: 50px;
+ 
+}
+
+.subtitle  {
+  margin-bottom: 10px;
 }
 
 /*Footer sectiom*/
