--- a/css/styles.css
+++ b/css/styles.css
@@ -364,7 +364,7 @@ img {
 
 /*Portfolio*/
 
-.portfolio-header {
+.header-port {
   margin-bottom: 94px;
     border: 1px solid transparent;
   border-bottom: solid #ECECEC;
@@ -392,7 +392,7 @@ img {
   
 }
 
-.container-filter {
+.filter-nav {
   display: flex;
   gap: 30px;
   align-items: center;
