--- a/css/styles.css
+++ b/css/styles.css
@@ -427,18 +427,19 @@ width: 270px;
   margin-bottom: 50px;
 }
 
-.filter button {
+.portfolio-button {
   font-family: inherit;
   color: var(--title-text-color);
   background-color: F5F4FA;
-  border: none;
-  font-weight: 500;
+    font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
   cursor: pointer;
   Corner radius: 4px
   padding: 6px 22px;
+  border: none;
+  
 }
 
 .portfolio
@@ -495,3 +496,4 @@ width: 270px;
 .footer-logo {
     margin-bottom: 20px;
 }
+
