--- a/css/styles.css
+++ b/css/styles.css
@@ -431,14 +431,14 @@ width: 270px;
   font-family: inherit;
   color: var(--title-text-color);
   background-color: F5F4FA;
-    font-weight: 500;
+  font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
   cursor: pointer;
   Corner radius: 4px
   padding: 6px 22px;
-  border: none;
+  
   
 }
 
@@ -448,12 +448,13 @@ width: 270px;
   padding-bottom: 94px;
 }
 
-.filter button:hover,
-.filter button:focus {
+.portfolio button:hover,
+.portfolio button:focus {
   color: var(--text-color);
   background-color: var(--accent-color);
   border-radius: 4px;
 }
+
 
 
 /*рамка*/
