--- a/css/styles.css
+++ b/css/styles.css
@@ -334,12 +334,17 @@ width: 270px;
 .footer {
   background-color: #2f303a;
   margin-bottom: 20px;
- 
+
+}
+
+.container-footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer .footer-word {
   color: var(--accent-color);
 }
-.footer .logo {
+.footer-logo {
   color: var(--text-color);
   font-family: 'Raleway';
   font-weight: 700;
@@ -437,13 +442,13 @@ width: 270px;
   text-align: center;
   cursor: pointer;
   Corner radius: 4px
+  border: none;
   padding: 6px 22px;
-  
-  
 }
 
-.portfolio
-{
+  
+
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -495,6 +500,7 @@ width: 270px;
 }
 
 .footer-logo {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+  
 }
 
