--- a/css/styles.css
+++ b/css/styles.css
@@ -334,13 +334,12 @@ width: 270px;
 /*Footer sectiom*/
 .footer {
   background-color: #2f303a;
-  margin-bottom: 20px;
-
+   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .container-footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  
 }
 .footer .footer-word {
   color: var(--accent-color);
@@ -360,7 +359,6 @@ width: 270px;
 
 
 .contacts-item .contacts-link {
-  font-family: normal;
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
@@ -401,8 +399,7 @@ width: 270px;
 /*Portfolio*/
 
 .header-port {
-      border: 1px solid transparent;
-  border-bottom: solid #ECECEC;
+      border-bottom: 1px solid #ECECEC;
     }
 
 
@@ -471,9 +468,9 @@ width: 270px;
   padding-bottom: 20px;
   padding-left: 5px;
   padding-right: 5px;
-  border-bottom: solid #EEEEEE;
-  border-left: solid #EEEEEE;
-  border-right: solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
   
 }
 
@@ -507,6 +504,6 @@ width: 270px;
   
 }
 
-.filter-item {
+.portfolio-btn {
   padding: 6px 22px;
 }
